bowling score computation with additional turns after strike